--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "captcha-solver"
-version = "0.2.0"
+version = "0.3.0"
 description = ""
 authors = ["Eldar MSI <kursus1010@gmail.com>"]
 readme = "README.md"
@@ -12,7 +12,7 @@ numpy = "^2.1.3"
 pillow = "^11.0.0"
 opencv-python = "^4.10.0.84"
 requests = "^2.32.3"
-selenium = "^4.26.1"
+lxml = "^5.3.0"
 
 
 [build-system]
